// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-slider renders 1`] = `
<rux-slider style="--slider-value-percent: 50%;">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="rux-slider">
        <input aria-disabled="false" aria-label="slider" class="rux-range" id="rux-slider-1" list="steplist" max="100" min="0" part="input" step="1" type="range" value="50">
      </div>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="50">
</rux-slider>
`;

exports[`rux-slider renders label prop 1`] = `
<rux-slider label="hello" style="--slider-value-percent: 50%;">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <label aria-hidden="false" class="rux-input-label" htmlfor="rux-slider-2" part="label">
        <slot name="label">
          hello
        </slot>
      </label>
      <div class="rux-slider">
        <input aria-disabled="false" aria-label="slider" class="rux-range" id="rux-slider-2" list="steplist" max="100" min="0" part="input" step="1" type="range" value="50">
      </div>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="50">
</rux-slider>
`;

exports[`rux-slider renders label slot 1`] = `
<rux-slider style="--slider-value-percent: 50%;">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <label aria-hidden="false" class="rux-input-label" htmlfor="rux-slider-3" part="label">
        <slot name="label"></slot>
      </label>
      <div class="rux-slider">
        <input aria-disabled="false" aria-label="slider" class="rux-range" id="rux-slider-3" list="steplist" max="100" min="0" part="input" step="1" type="range" value="50">
      </div>
    </div>
  </mock:shadow-root>
  <div slot="label">
    hello
  </div>
  <input class="aux-input" type="hidden" value="50">
</rux-slider>
`;
